HE-21 Fixed the one cause- size of the team font was too big.

--- a/modules/front-end/app/assets/stylesheets/_marketplace.less
+++ b/modules/front-end/app/assets/stylesheets/_marketplace.less
@@ -761,6 +761,10 @@
 
         .main {
 
+          .verticals section article hgroup h3 {
+            font-size: .70em;
+          }
+
           .view-options {
 
             .sort-by {
@@ -781,7 +785,7 @@
 
       }
 
-    }   
+    }
 
   } // end #content.marketplace 
 
